2012-05-24  Albert Chu <chu11@llnl.gov>

	* Deprecate use of --skip-checks in ipmi-fru in favor of
	"skipchecks" workaround flag.
	
2012-05-23  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/sel/ipmi-sel.h,
	libfreeipmi/sel/ipmi-sel.c (ipmi_sel_ctx_set_parameter,
	ipmi_sel_ctx_get_parameter): New functions.

	* libfreeipmi/include/freeipmi/sel/ipmi-sel.h,
	libfreeipmi/sel/ipmi-sel.c (ipmi_sel_ctx_set_interpret): Removed
	function.

	* ipmi-sel/, ipmi-pet/: Adjust for lib changes.

	* common/toolcommon/, ipmi-sensors/, libfreeipmi/sel/,
	libipmimonitoring/: Use ipmi_sdr_parse_sensor_name as needed.
	
2012-05-22  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/interpret/: Support Supermicro OEM SEL event
	interpretations.

	* libfreeipmi/interpret/ipmi-interpret-config-sel.c,
	etc/freeipmi_interpret_sel.conf: Fix comment typos.

	* libfreeipmi/include/freeipmi/sdr/ipmi-sdr.h,
	libfreeipmi/sdr/ipmi-sdr-parse-util.c (ipmi_sdr_parse_sensor_name):
	New function.
	
2012-05-22  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/sel/ipmi-sel.h, libfreeipmi/sel/:
	Support interpretation of event in sel library.  Support %I string
	output.
	
	* common/toolcommon/tool-event-common.h,
	common/toolcommon/tool-event-common.c (event_load_event_state_config_file):
	New function.
	
	* Globally update tools as necessary for changes.

2012-05-22  Albert Chu <chu11@llnl.gov>

	* common/toolcommon/tool-sdr-cache-common.h,
	common/toolcommon/tool-sdr-cache-common.c (sdr_cache_setup_debug):
	Remove function.  Fold into sdr_cache_create_and_load.

	* Globally update tools as necessary for changes.
	
2012-05-21  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/sel/ipmi-sel.c, libfreeipmi/sel/:
	Support IPMI_SEL_STRING_FLAGS_ENTITY_SENSOR_NAMES flag.
	
	* Adjust tools and common/toolcommon for new option.
	
2012-05-21  Albert Chu <chu11@llnl.gov>

	Merge branch entitysensornamesredo.

	* libfreeipmi/include/freeipmi/sdr/, libfreeipmi/sdr/: Support new