@@ -401,8 +401,6 @@
 #
 # ipmi-sel-event-state-config-file /my/event.conf
 #
-# ipmi-sel-assume-system-event-records DISABLE
-#
 # ipmi-sel-interpret-oem-data DISABLE
 #
 # ipmi-sel-output-oem-event-strings DISABLE
